--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ dependencies = [
     "pulumi-aws>=6.81.0",
     "pulumi-awsx>=2.21.1",
     "pulumi-docker>=4.7.0",
+    "google-auth>=2.34.0",
+    "requests>=2.31.0",
+    "python-dotenv>=1.0.0",
+    "click>=8.1.0",
 ]
 
 [tool.uv]
