--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "requests>=2.31.0",
     "python-dotenv>=1.0.0",
     "click>=8.1.0",
+    "supabase>=2.15.3",
 ]
 
 [tool.uv]
